css/main.css
@import "variables.css";

/********** BASIC **********/
* {
    -moz-osx-font-smoothing: auto;
    -webkit-font-smoothing: antialiased;
    color: var(--color-text);
    font-family: var(--font-family-primary);
    font-size: var(--font-size-base);
    text-rendering: optimizelegibility;
}

html {
    font-size: var(--font-size-base);
    scroll-behavior: smooth;
}

body {
    background: var(--color-bg);
    margin: 0;
    padding: 0;
}

a {
    color: var(--color-primary-dark);
    text-decoration: none;
}

a:hover, a:active {
    text-decoration: underline;
}

/* Make all block elements having box-sizing to border-box,
   for easier size designs */
address, article, aside, blockquote, button, canvas, dd, div, dl, dt, fieldset, figcaption, figure, footer, form, h1,
h2, h3, h4, h5, h6, header, hr, input, li, main, nav, noscript, ol, p, pre, section, table, tfoot, ul, video {
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
}

h1, h2, h3, h4, h5, h6 {
    font-weight: 500;
    margin: 0;
}

h1 {
    font-size: 2.33333333333rem;
}

h2 {
    font-size: 2rem;
}

h3 {
    font-size: 1.66666666667rem;
}

h4 {
    font-size: 1.33333333333rem;
}

h5 {
    font-size: 1rem;
}

h6 {
    font-size: 0.66666666667rem;
}

input[type="password"], input[type="text"], button, input[type="submit"], input[type="reset"], input[type="button"] {
    border: 1px solid var(--color-border);
    border-radius: var(--border-radius-input-box);
    font-size: 1.3333333333rem;
    line-height: 1.444444444rem;
    padding: 14px 16px;
    width: 100%;
}

input[type="password"]:focus, input[type="text"]:focus {
    box-shadow: 0 0 0 4px var(--color-primary-transparent);
    outline: 1px solid var(--color-primary-dark);
}

button, input[type="submit"], input[type="reset"], input[type="button"] {
    background-color: var(--color-primary-dark);
    color: #FFFFFF;
    border: 0;
    cursor: pointer;
    font-size: 1.5rem;
    font-weight: 700;
    line-height: 3.5rem;
    padding: 0 16px;
    transition: transform 300ms;
}

button:hover, input[type="submit"]:hover, input[type="reset"]:hover, input[type="button"]:hover {
    background-image: -webkit-linear-gradient(0, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
    background-image: linear-gradient(0, rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.1));
}

button:active, input[type="submit"]:active, input[type="reset"]:active, input[type="button"]:active {
    transform: scale(0.98);
}

/********** PAGE COMPONENTS **********/
#root {
    display: flex;
    flex-direction: row;
    align-items: center;
    justify-content: space-evenly;
    padding: 40px 100px 100px 100px;
    width: 100%;
}

#root > *, #login > * {
    margin: 40px 0;
}

#page-title {
    margin-right: 28px;
    width: 500px;
}

#logo {
    display: block;
    height: 106px;
    margin: 0 -28px;
    margin-top: -60px;
}

#slogan {
    font-size: 2rem;
    line-height: 2.6666666667rem;
    width: auto;
}

#login-card {
    align-items: center;
    background: #FFFFFF;
    border-radius: var(--border-radius-card);
    box-shadow: var(--box-shadow-default);
    display: flex;
    flex-direction: column;
    margin-top: 100px;
    padding: 10px 15px;
    width: 400px;
}

#login-card form > *, #login-card > :not(form) {
    margin: 8px 0;
}

#forgot-password {
    text-align: center;
    font-size: 1.4rem;
    font-weight: 600;
}

.separator {
    content: " ";
    border-top: 1px solid var(--color-border);
    margin: 20px 0 !important;
    width: 100%;
}

#create-account-btn {
    background-color: var(--color-green);
    font-size: 1.33333333333333rem;
    width: auto;
}

#create-page-msg {
    font-size: 1.1rem;
    font-weight: 400;
    text-align: center;
}

#create-page-msg a {
    color: inherit;
    font-size: 1.1rem;
    font-weight: 600;
}

@media screen and (max-width: 900px) {
    #root {
        flex-direction: column;
        align-items: center;
        padding-top: 10px;
    }

    #root > *, #login > * {
        width: 400px;
    }

    #page-title, #login-card {
        margin: 0;
    }

    #logo {
        margin: auto;
    }

    #slogan {
        text-align: center;
    }
}

@media screen and (max-width: 1075px) {
    #slogan {
        line-height: 2.1rem;
        font-size: 1.7rem;
    }
}

